--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "license": "MIT",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5 || ^7.0"
+        "php": ">=5.5 || ^7.0",
+        "symfony/yaml": "2.* || 3.*"
     },
     "require-dev": {
-        "symfony/yaml": "2.* || 3.*",
         "phpunit/phpunit": "5.*"
     },
     "autoload": {
