--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "license": "MIT",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5 || ^7.0",
-        "symfony/yaml": "2.* || 3.*"
+        "php": ">7.0",
+        "symfony/yaml": "4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*"
+        "phpunit/phpunit": "6.*"
     },
     "autoload": {
         "psr-4": {
